# claims-denials-revenue-cycle-analytics

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: deploy-pages.yml
data/raw/: custom_claims_template.csv
docs/: Claims_Denials_Revenue_Cycle_Analytics_Blueprint.md  Healthcare_Claims_Intelligence_Project_Blueprint.md  Provider_Network_Value_Based_Care_Analytics_Blueprint.md  custom_data_guide.md  dashboard_spec.md  data_dictionary.md  data_sources.md  github_publication_checklist.md  kpi_dictionary.md  model_cards.md  simulation_methodology.md
reports/pdf/: Claims_Denials_Revenue_Cycle_Analytics_Blueprint.html  Healthcare_Claims_Intelligence_Project_Blueprint.html  Provider_Network_Value_Based_Care_Analytics_Blueprint.html
scripts/: build_static_site.py  render_blueprints_to_pdf.mjs  run_claims_denials_pipeline.py  serve_dashboard.py
sql/05_marts/: claims_denials_marts.sql
src/revenue_cycle_analytics/: __init__.py  config.py  custom_data.py  data_generation.py  documentation.py  marts.py  models.py  pipeline.py  quality.py  reporting.py  warehouse.py
tests/: test_pipeline.py
